src/main/fabric8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ivo-fis-producer
  labels:
    app: ivo-fis-producer
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: ivo-fis-1
  type: ClusterIP
