src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: ivo-fis-producer
  labels:
    app: ivo-fis-producer
spec:
  to:
    kind: Service
    name: ivo-fis-producer
